# kata-dl

./: .gitignore  default.nix  kata-dl.cabal  shell.nix
app/: Main.hs
app/Kata/: Base.hs  Scrape.hs
